fix about format, brain nav

--- a/about.html
+++ b/about.html
@@ -32,23 +32,30 @@
 
     <section>
       <div class='about-sidebar'>
-        <img class='about-img' src="images/ch-self-cr.png">
+        <div class='about-img'>
+          <img src="images/ch-self-cr.png">
+        </div>
         <div class='short'>
           <ul><h2 class='short-title'>The Short List</h2>
             <li>&bull; political issue: climate change</li>
             <li>&bull; guilty pleasure: showtunes</li>
             <li>&bull; proud accomplishment: I’ve run two marathons.</li>
             <li>&bull; embarassing secret: I own three fannie packs.</li>
-            <li>&bull; hidden talent: I can recite Hamlet's famous<br>&nbsp;&nbsp;‘to-be-or-not-to-be’ soliloquy.</li>
+            <li>&bull; fascination: behavioral economics</li>
+            <li>&bull; hidden talent: I can recite Hamlet's big soliloquy.</li>
             <li>&bull; odd habit: I keep diligent lists of good catch<br>&nbsp;&nbsp;phrases, band names and t-shirt ideas.</li>
+            <li>&bull; favorite hobby: exploring a new city</li>
           </ul>
         </div>
       </div>
-    <h1 class='about'>ABOUT</h1><br>
-    <p>I'm a recent gradutate of the Web Development Immersive program at General Assembly, a 12-week full-time dev bootcamp and I'm excited to hone my new skills as a junior developer. What really inspired me to take that on was my previous position at <a href='http://www.sketchbookproject.com/'>The Sketchbook Project</a>, a start-up that runs global, crowdsourced, interactive art projects. That's where I learned how technology can promote real interaction and engagement.</p><br>
-    <p>I think both development and design come down to organizing data so that it's most accessible to the user. So for me, it's all about conveying a message or presenting information as efficiently as possible.</p><br>
-    <p>When I'm not coding, I like to listen to podcasts on long runs, play pick-up soccer, cook mediterranean and pet any dog I meet. I keep visual journals where I collect design ideas, inspiration and make all sorts of lists. I love lists. One of my favorite experiences in life is to find myself in a new city and go exploring. I'm also fascinated by behavioral economics—how we make decisions and why we act the way we do. Ask me about it and I will talk your ear right off.</p><br>
-    <p>I am a sponge for all things web development so if you have any advice or questions or are looking for a newbie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a href='mailto:chrisheuberg@gmail.com'>reach out!</a> I'd really love to hear from you.<p>
+      <div class='about-format'>
+        <h1 class='about'>ABOUT</h1><br>
+        <p>I'm a recent gradutate of the Web Development Immersive (WDI) program at General Assembly, a 12-week full-time dev bootcamp and an incredible experience. What really inspired me to become a developer was my previous position at <a class='about-link' href='http://www.sketchbookproject.com/'>The Sketchbook Project</a>, a start-up that runs global, crowdsourced, interactive art projects. That's where I learned how technology can promote real interaction and engagement.</p><br>
+        <p>I think both development and design come down to organizing data so that it's most accessible to the user. So for me, it's all about conveying a message or presenting information as efficiently as possible.</p><br>
+        <p>When I'm not coding, I like to listen to podcasts on long runs, play pick-up soccer, cook mediterranean and pet any dog I meet.<br>I keep visual journals where I collect design ideas, inspiration and make all sorts of lists.</p><br>
+        <p>I love lists.</p><br>
+        <p>But basically, I am a sponge for all things web development so if you have any advice or questions or are looking for a newbie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a class='about-link' href='mailto:chrisheuberg@gmail.com'>reach out!</a><p>
+        </div>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
