--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <br>
 
       <h2 class='interests'>INTERESTS</h2>
-      <div class="image">
-        <img src="images/brain-venn-diagram.jpg" alt="brain venn diagram" class='main-img'>
-        <h2 class='amazing'><a class='image-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
-        <h2 class='information'><a class='image-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
-        <h2 class='solving'><a class='image-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
-        <h2 class='communication'><a class='image-nav' href="photo.html">COMMUNICATION</a></h2>
-        <h2 class='pizza'><a class='image-nav' href="play.html">PIZZA</a></h2>
+      <div class="brain">
+        <img src="images/brain-venn-diagram.jpg" alt="brain venn diagram (get it?)">
+        <h2 class='amazing'><a class='brain-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
+        <h2 class='information'><a class='brain-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
+        <h2 class='solving'><a class='brain-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
+        <h2 class='communication'><a class='brain-nav' href="photo.html">COMMUNICATION</a></h2>
+        <h2 class='pizza'><a class='brain-nav' href="play.html">PIZZA</a></h2>
      </div>
 
     <footer>
