--- a/design.html
+++ b/design.html
@@ -16,7 +16,7 @@
         <br>
       </a>
       <h3 class='nav name' href="index.html">Chris Heuberger</h3>
-      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p class='nav title' href="about.html">web developer + designer</p><br>
       <p><a class='nav' href="about.html">about</a></p>
       <p><a class='nav' href="development.html">development</a></p>
       <p><a class='nav current' href="design.html">design</a></p>
