--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,9 @@
         <br>
       </a>
       <h3 class='nav name' href="index.html">Chris Heuberger</h3>
-      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p class='nav title' href="about.html">web developer + designer</p><br>
       <p><a class='nav' href="about.html">about</a></p>
-      <p><a class='nav' href="development.html">dev</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
       <p><a class='nav' href="design.html">design</a></p>
       <p><a class='nav' href="photo.html">photo</a></p>
       <p><a class='nav' href="play.html">play</a></p><br>
@@ -107,10 +107,10 @@
         <h2 class='resume'>STACK</h2>
         <div class='resume-shim'></div>
 
+        <p>HTML / CSS</p>
         <p>Ruby on Rails / JavaScript</p>
-        <p>jQuery / AJAX / SQL</p>
-        <p>Backbone / Node / MongoDB</p>
-        <p>HTML / CSS / D3</p>
+        <p>jQuery / AJAX / Backbone</p>
+        <p>Node / MongoDB / SQL / D3</p>
 
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
