downcase image names

--- a/design.html
+++ b/design.html
@@ -48,8 +48,8 @@
         <img src="images/design/halloween-flyer.jpg">
         <img src="images/design/nyfile.jpg">
         <img src="images/design/concept-dartboard.jpg">
-        <img src="images/design/Insert-sample1.jpg">
-        <img src="images/design/Insert-sample2.jpg">
+        <img src="images/design/insert-sample1.jpg">
+        <img src="images/design/insert-sample2.jpg">
         <img src="images/design/poster-royal-we.jpg">
         <img src="images/design/poster-union-artwalk.jpg">
         <img src="images/design/poster-we-are-best.jpg">
@@ -59,8 +59,8 @@
         <img src="images/design/gold-shoulder.jpg">
         <img src="images/design/killer-cat.jpg">
         <img src="images/design/banana-poster.jpg">
-        <img src="images/design/IMG_7362.jpg">
-        <img src="images/design/IMG_7363.jpg">
+        <img src="images/design/img_7362.jpg">
+        <img src="images/design/img_7363.jpg">
         <img src="images/design/aiga.jpg">
         <img src="images/design/aiga2.jpg">
         <img src="images/design/lp-flyer2.jpg">
@@ -69,13 +69,13 @@
         <img src="images/design/lp-flyer4.jpg">
         <img src="images/design/lp-flyer6.jpg">
         <img src="images/design/lp-flyer8.jpg">
-        <img src="images/design/IMG_7274.jpg">
-        <img src="images/design/IMG_7284.jpg">
-        <img src="images/design/IMG_7292.jpg">
-        <img src="images/design/IMG_7299.jpg">
-        <img src="images/design/IMG_7308.jpg">
-        <img src="images/design/IMG_7290.jpg">
-        <img src="images/design/IMG_7307.jpg">
+        <img src="images/design/img_7274.jpg">
+        <img src="images/design/img_7284.jpg">
+        <img src="images/design/img_7292.jpg">
+        <img src="images/design/img_7299.jpg">
+        <img src="images/design/img_7308.jpg">
+        <img src="images/design/img_7290.jpg">
+        <img src="images/design/img_7307.jpg">
         <img src="images/design/abt.jpg">
         <img src="images/design/aacc.jpg">
         <img src="images/design/acc.jpg">
@@ -108,7 +108,7 @@
         <img src="images/design/fiss-logo4.jpg">
         <img src="images/design/fiss-logo1.jpg">
         <img src="images/design/fiss-logo2.jpg">
-        <img src="images/design/BMZ-lettering-2.jpg">
+        <img src="images/design/bmz-lettering-2.jpg">
       </div>
       <img class="large" src="">
       <div class='explainer'></div>
