--- a/play.html
+++ b/play.html
@@ -81,70 +81,70 @@
         <img src="images/play/ex8.jpg">
         <img src="images/play/ex9.jpg">
         <img src="images/play/ex10.jpg">
-        <img src="images/play/IMG_3826.jpg">
-        <img src="images/play/IMG_3824.jpg">
-        <img src="images/play/IMG_7145.jpg">
-        <img src="images/play/IMG_7148.jpg">
-        <img src="images/play/IMG_7152.jpg">
-        <img src="images/play/IMG_7150.jpg">
-        <img src="images/play/IMG_7153.jpg">
-        <img src="images/play/IMG_7141.jpg">
-        <img src="images/play/IMG_7212.jpg">
-        <img src="images/play/IMG_7154.jpg">
-        <img src="images/play/IMG_7155.jpg">
-        <img src="images/play/IMG_7158.jpg">
-        <img src="images/play/IMG_7165.jpg">
-        <img src="images/play/IMG_7166.jpg">
-        <img src="images/play/IMG_7168.jpg">
-        <img src="images/play/IMG_7169.jpg">
-        <img src="images/play/IMG_7170.jpg">
-        <img src="images/play/IMG_7171.jpg">
-        <img src="images/play/IMG_7173.jpg">
-        <img src="images/play/IMG_7179.jpg">
-        <img src="images/play/IMG_7176.jpg">
-        <img src="images/play/IMG_7178.jpg">
-        <img src="images/play/IMG_7180.jpg">
-        <img src="images/play/IMG_7159.jpg">
-        <img src="images/play/IMG_7204.jpg">
-        <img src="images/play/IMG_7219.jpg">
-        <img src="images/play/IMG_7187.jpg">
-        <img src="images/play/IMG_7182.jpg">
-        <img src="images/play/IMG_7184.jpg">
-        <img src="images/play/IMG_7193.jpg">
-        <img src="images/play/IMG_7194.jpg">
+        <img src="images/play/img_3826.jpg">
+        <img src="images/play/img_3824.jpg">
+        <img src="images/play/img_7145.jpg">
+        <img src="images/play/img_7148.jpg">
+        <img src="images/play/img_7152.jpg">
+        <img src="images/play/img_7150.jpg">
+        <img src="images/play/img_7153.jpg">
+        <img src="images/play/img_7141.jpg">
+        <img src="images/play/img_7212.jpg">
+        <img src="images/play/img_7154.jpg">
+        <img src="images/play/img_7155.jpg">
+        <img src="images/play/img_7158.jpg">
+        <img src="images/play/img_7165.jpg">
+        <img src="images/play/img_7166.jpg">
+        <img src="images/play/img_7168.jpg">
+        <img src="images/play/img_7169.jpg">
+        <img src="images/play/img_7170.jpg">
+        <img src="images/play/img_7171.jpg">
+        <img src="images/play/img_7173.jpg">
+        <img src="images/play/img_7179.jpg">
+        <img src="images/play/img_7176.jpg">
+        <img src="images/play/img_7178.jpg">
+        <img src="images/play/img_7180.jpg">
+        <img src="images/play/img_7159.jpg">
+        <img src="images/play/img_7204.jpg">
+        <img src="images/play/img_7219.jpg">
+        <img src="images/play/img_7187.jpg">
+        <img src="images/play/img_7182.jpg">
+        <img src="images/play/img_7184.jpg">
+        <img src="images/play/img_7193.jpg">
+        <img src="images/play/img_7194.jpg">
         <img src="images/play/img001.jpg">
-        <img src="images/play/IMG_7198.jpg">
-        <img src="images/play/IMG_7199.jpg">
-        <img src="images/play/IMG_7202.jpg">
-        <img src="images/play/IMG_7203.jpg">
-        <img src="images/play/IMG_7207.jpg">
-        <img src="images/play/IMG_7214.jpg">
+        <img src="images/play/img_7198.jpg">
+        <img src="images/play/img_7199.jpg">
+        <img src="images/play/img_7202.jpg">
+        <img src="images/play/img_7203.jpg">
+        <img src="images/play/img_7207.jpg">
+        <img src="images/play/img_7214.jpg">
         <img src="images/play/img004.jpg">
-        <img src="images/play/IMG_7209.jpg">
-        <img src="images/play/IMG_7220.jpg">
-        <img src="images/play/IMG_7225.jpg">
-        <img src="images/play/IMG_7224.jpg">
-        <img src="images/play/IMG_7227.jpg">
-        <img src="images/play/IMG_7221.jpg">
-        <img src="images/play/IMG_7218.jpg">
-        <img src="images/play/IMG_7228.jpg">
-        <img src="images/play/IMG_7229.jpg">
-        <img src="images/play/IMG_7230.jpg">
+        <img src="images/play/img_7209.jpg">
+        <img src="images/play/img_7220.jpg">
+        <img src="images/play/img_7225.jpg">
+        <img src="images/play/img_7224.jpg">
+        <img src="images/play/img_7227.jpg">
+        <img src="images/play/img_7221.jpg">
+        <img src="images/play/img_7218.jpg">
+        <img src="images/play/img_7228.jpg">
+        <img src="images/play/img_7229.jpg">
+        <img src="images/play/img_7230.jpg">
         <img src="images/play/img003.jpg">
-        <img src="images/play/IMG_7239.jpg">
-        <img src="images/play/IMG_7234.jpg">
-        <img src="images/play/IMG_7235.jpg">
-        <img src="images/play/IMG_7236.jpg">
-        <img src="images/play/IMG_7242.jpg">
-        <img src="images/play/IMG_7240.jpg">
-        <img src="images/play/IMG_7245.jpg">
-        <img src="images/play/IMG_7247.jpg">
-        <img src="images/play/IMG_7259.jpg">
-        <img src="images/play/IMG_7249.jpg">
-        <img src="images/play/IMG_7271.jpg">
-        <img src="images/play/IMG_7262.jpg">
-        <img src="images/play/IMG_7265.jpg">
-        <img src="images/play/IMG_7269.jpg">
+        <img src="images/play/img_7239.jpg">
+        <img src="images/play/img_7234.jpg">
+        <img src="images/play/img_7235.jpg">
+        <img src="images/play/img_7236.jpg">
+        <img src="images/play/img_7242.jpg">
+        <img src="images/play/img_7240.jpg">
+        <img src="images/play/img_7245.jpg">
+        <img src="images/play/img_7247.jpg">
+        <img src="images/play/img_7259.jpg">
+        <img src="images/play/img_7249.jpg">
+        <img src="images/play/img_7271.jpg">
+        <img src="images/play/img_7262.jpg">
+        <img src="images/play/img_7265.jpg">
+        <img src="images/play/img_7269.jpg">
         <img src="images/play/img005.jpg">
         <img src="images/play/img006.jpg">
         <img src="images/play/img007.jpg">
