fix missing images test

--- a/play.html
+++ b/play.html
@@ -72,6 +72,8 @@
       <div class='bump'></div>
       <div class='grid'>
         <img src="images/play/ex1.jpg">
+        <img src="images/play/ex1.jpg">
+        <img src="images/play/ex1.jpg">
         <img src="images/play/ex2.jpg">
         <img src="images/play/ex3.jpg">
         <img src="images/play/ex4.jpg">
