add google analytics

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<br><!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -68,6 +68,6 @@
           </p>
         </footer>
       </section>
-    </div>
+    </div><br>
   </body>
   </html>
