--- a/development.html
+++ b/development.html
@@ -46,15 +46,24 @@
       </div>
       <footer>
         <p>
-          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
+          <small>
+              <a class='license' rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+                <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
+              </a>
+              <span class='license'>
+                All work is licensed under a
+                <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+                  Creative Commons Attribution 4.0 International License.
+                </a>
+              </span><br>
+            Thanks for reading. Have a <a class='quote'>nice day.</a>
             <span class='fade'>
               &nbsp;&mdash;&nbsp;
               <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
             </span>
           </small>
-        </p>
+        </p><br>
       </footer>
-
     </section>
   </div>
 </body>
