--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
       <div id='intro'>
         <h3 class='highlight'>Hi, <a href="development.html">I'm a web developer</a> with a background in graphic design. My goal is to put my overlapping passions for development, design and venn diagrams to good use. Please do say <a href='mailto:chrisheuberg@gmail.com'>hello.</a></h3>
         <br>
-
-        <h2 class='interests'>INTERESTS</h2>
-        <div class="brain">
-          <img src="images/brain-venn-diagram.jpg" alt="brain venn diagram (get it?)">
-          <h2 class='amazing'><a class='brain-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
-          <h2 class='information'><a class='brain-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
-          <h2 class='solving'><a class='brain-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
-          <h2 class='communication'><a class='brain-nav' href="photo.html">COMMUNICATION</a></h2>
-          <h2 class='pizza'><a class='brain-nav' href="play.html">PIZZA</a></h2>
+        <div class='venn'>
+          <h2 class='interests'>INTERESTS</h2>
+          <div class="brain">
+            <img src="images/brain-venn-diagram.jpg" alt="brain venn diagram (get it?)">
+            <h2 class='amazing'><a class='brain-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
+            <h2 class='information'><a class='brain-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
+            <h2 class='solving'><a class='brain-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
+            <h2 class='communication'><a class='brain-nav' href="photo.html">COMMUNICATION</a></h2>
+            <h2 class='pizza'><a class='brain-nav' href="play.html">PIZZA</a></h2>
+          </div>
         </div>
       </div>
-
       <footer>
         <p>
           <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
@@ -66,7 +66,7 @@
               <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
             </span>
           </small>
-        </p>
+        </p><br>
       </footer>
     </section>
   </div>
