--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section>
       <div id='intro'>
-        <h3 class='highlight'>Hi, <a href="development.html">I'm a web developer</a> with a background in graphic design. My goal is to put my overlapping passions for development, design and venn diagrams to good use. Please do say <a href='mailto:chrisheuberg@gmail.com'>hello.</a></h3>
+        <h3 class='highlight'><a href="development.html">I'm a web developer</a> with a background in graphic design.<br>My aim is to put my overlapping passions for development, design and venn diagrams to good use. Please do say <a href='mailto:chrisheuberg@gmail.com'>hello.</a></h3>
         <br>
         <div class='venn'>
           <h2 class='interests'>INTERESTS</h2>
