--- a/photo.html
+++ b/photo.html
@@ -32,7 +32,9 @@
       <p class='number'>240.393.9747</p>
     </header>
     <section>
-      <h1>PHOTO</h1><br>
+      <h1>PHOTO</h1>
+      <span class='close'>CLOSE (X)</span>
+      <br>
       <div class='grid'>
         <img src="images/photo/fb1.jpg">
         <img src="images/photo/fb2.jpg">
@@ -64,9 +66,6 @@
       <footer>
         <p>
           <small>
-              <a class='license' rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-                <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
-              </a>
               <span class='license'>
                 All work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
