--- a/play.html
+++ b/play.html
@@ -71,6 +71,8 @@
         </div>
       </div>
       <div class='bump'></div>
+      <span class='close'>CLOSE (X)</span>
+      <br>
       <div class='grid'>
         <img src="images/play/ex1.jpg">
         <img src="images/play/ex2.jpg">
@@ -175,9 +177,6 @@
       <footer>
         <p>
           <small>
-              <a class='license' rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-                <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
-              </a>
               <span class='license'>
                 All work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
