--- a/development.html
+++ b/development.html
@@ -37,20 +37,17 @@
       <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator.png"></a>
       <div class='caption'>
         <h3>CURATOR</h3>
-        <p>A web app to guide you through the Brooklyn Museum and to prevent you from ever again looking at an artwork and saying, "I don't get it."</p>
+        <p>A web app that allows you search the entire collection of The Brooklyn Museum, see information about each piece and curate your own gallery with your favorite works. It uses Rails 4 and The Brooklyn Museum API.</p>
       </div>
       <br><hr><br>
       <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence.png"></a>
       <div class='caption'>
         <h3>VALENCE</h3>
-        <p>A web app that enables you to make a playlist and see your music in a new way with dynamic, animated data visualizations.</p>
+        <p>A tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
       </div>
       <footer>
         <p>
           <small>
-              <a class='license' rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-                <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
-              </a>
               <span class='license'>
                 All work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
