--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
+  <meta name="description" content="developer / designer / organizer">
   <title>Chris Heuberger</title>
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
