fix dev decriptions

--- a/development.html
+++ b/development.html
@@ -37,13 +37,13 @@
       <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator.png"></a>
       <div class='caption'>
         <h3>CURATOR</h3>
-        <p>A web app that allows you search the entire collection of The Brooklyn Museum, see information about each piece and curate your own gallery with your favorite works. It uses Rails 4, PostgreSQL and The Brooklyn Museum API.</p>
+        <p>Curator allows you to search the entire collection of The Brooklyn Museum, see information about each piece and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL and The Brooklyn Museum API.</p>
       </div>
       <br><hr><br>
       <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence.png"></a>
       <div class='caption'>
         <h3>VALENCE</h3>
-        <p>A tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
+        <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
       </div>
       <footer>
         <p>
