--- a/development.html
+++ b/development.html
@@ -34,16 +34,24 @@
 
     <section>
       <h1>DEVELOPMENT</h1><br>
-      <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator.png"></a>
       <div class='caption'>
         <h3>CURATOR</h3>
         <p>Curator allows you to search the entire Brooklyn Museum collection, see information about each piece and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL and The Brooklyn Museum API.</p>
       </div>
+      <div class='screenshot'>
+        <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator1.png"></a>
+        <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator2.png"></a>
+        <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator3.png"></a>
+      </div>
       <br><hr><br>
-      <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence.png"></a>
       <div class='caption'>
         <h3>VALENCE</h3>
         <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
+      </div>
+      <div class='screenshot'>
+        <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence1.png"></a>
+        <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence2.png"></a>
+        <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence3.png"></a>
       </div>
       <footer>
         <p>
