--- a/development.html
+++ b/development.html
@@ -2,14 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
   <title>Chris Heuberger / development</title>
+  <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/styles.css">
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="javascripts/scripts.js"></script>
+  <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
+  <!--[if lt IE 7]>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+  <![endif]-->
   <div class="wrapper">
     <header>
       <a href="index.html">
@@ -18,18 +24,20 @@
       </a>
       <h3 class='nav name'>Chris Heuberger</h3>
       <p class='nav title'>web developer + designer</p><br>
-      <p><a class='nav' href="about.html">about</a></p>
-      <p><a class='nav current' href="development.html">development</a></p>
-      <p><a class='nav' href="design.html">design</a></p>
-      <p><a class='nav' href="photo.html">photo</a></p>
-      <p><a class='nav' href="play.html">play</a></p><br>
-      <p><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></p>
-      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></p>
-      <p><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></p>
-      <p><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></p><br>
-      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
-      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
-      <p class='number'>240.393.9747</p>
+      <ul class='nav-ul'>
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav current' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
+        <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+        <li class='number'>240.393.9747</li>
+      </ul>
     </header>
 
     <section>
@@ -72,5 +80,8 @@
       </footer>
     </section>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+  <script src="javascripts/scripts.js"></script>
 </body>
 </html>
