--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
 |   _   ||       ||   |  | | |   |  |   _   |    |   |   |   |
 |__| |__||_______||___|  |_| |___|  |__| |__|    |___|   |___|
 -->
-<html>
+
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <meta name="description" content="developer / designer / organizer">
+  <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
   <title>Chris Heuberger</title>
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/styles.css">
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="javascripts/scripts.js"></script>
+  <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
+  <!--[if lt IE 7]>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+  <![endif]-->
   <div class="wrapper">
     <header>
       <a href="index.html">
@@ -33,18 +39,20 @@
       </a>
       <h3 class='nav name'>Chris Heuberger</h3>
       <p class='nav title'>web developer + designer</p><br>
-      <p><a class='nav' href="about.html">about</a></p>
-      <p><a class='nav' href="development.html">development</a></p>
-      <p><a class='nav' href="design.html">design</a></p>
-      <p><a class='nav' href="photo.html">photo</a></p>
-      <p><a class='nav' href="play.html">play</a></p><br>
-      <p><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></p>
-      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></p>
-      <p><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></p>
-      <p><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></p><br>
-      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
-      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
-      <p class='number'>240.393.9747</p>
+      <ul class='nav-ul'>
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
+        <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+        <li class='number'>240.393.9747</li>
+      </ul>
     </header>
 
     <section>
@@ -75,5 +83,8 @@
       </footer>
     </section>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+  <script src="javascripts/scripts.js"></script>
 </body>
 </html>
