--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <p>For me, development and design come down to organizing information so that it's most accessible to the user; i.e. conveying a message efficiently and crafting an intuitive experience.</p><br>
         <p>When I'm not coding, I like to run while listening to podcasts, play pick-up soccer, cook mediterranean and pet any dog I meet.<br>I keep visual journals where I collect design ideas, inspiration and make all sorts of lists.</p><br>
         <p>I love lists.</p><br>
-        <p>But basically, I am a sponge for all things web development so if you have any advice or questions or are looking for a newbie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a class='about-link' href='mailto:chrisheuberg@gmail.com'>reach out!</a><p>
+        <p>But basically, I'm a sponge for all things web development so if you have any advice or questions or are looking for a rookie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a class='about-link' href='mailto:chrisheuberg@gmail.com'>reach out!</a><p>
         </div>
         <footer>
           <p>
