remove break from last update

--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,7 @@
         <div class='resume-shim'></div>
 
         <h4>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
-        <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p><br>
+        <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p>
 
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
