add to stack on resume

--- a/resume.html
+++ b/resume.html
@@ -52,16 +52,12 @@
         <h2 class='resume'>EXPERIENCE</h2>
         <div class='resume-shim'></div>
 
-        <div class='resume-shim'></div>
-        <div class='resume-shim'></div>
-
         <h3>General Assembly / New York, NY</h3>
         <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
         <ul>
           <li>completed a 12-week full-time development bootcamp that covers a broad range of topics, all with an emphasis on agile methodology</li>
         </ul>
 
-        <div class='resume-shim'></div>
         <div class='resume-shim'></div>
 
         <h3>Art House Co-op / Brooklyn, NY</h3>
@@ -75,7 +71,6 @@
         </ul>
 
         <div class='resume-shim'></div>
-        <div class='resume-shim'></div>
 
         <h3>T Salon / New York, NY</h3>
         <h4>Graphic Designer, October 2009&ndash;March 2011</h4>
@@ -88,7 +83,6 @@
         </ul>
 
         <div class='resume-shim'></div>
-        <div class='resume-shim'></div>
 
         <h3>The Madison Design Group / Bethesda, MD</h3>
         <h4>Graphic Designer, October 2005&ndash;September 2009</h4>
@@ -97,6 +91,8 @@
           <li>managed projects and oversaw production for corporate and non-profit clients</li>
         </ul>
 
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
 
@@ -114,11 +110,14 @@
         <h2 class='resume'>STACK</h2>
         <div class='resume-shim'></div>
 
-        <p>HTML / CSS</p>
-        <p>Ruby on Rails / JavaScript</p>
-        <p>jQuery / AJAX / Backbone</p>
-        <p>Node / MongoDB / SQL / D3</p>
+        <p>HTML5 / CSS3</p>
+        <p>Ruby / Rails4 / Sinatra</p>
+        <p>JavaScript / jQuery / AJAX</p>
+        <p>Backbone.js / Node.js</p>
+        <p>MongoDB / SQL / D3.js</p>
 
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
 
@@ -130,6 +129,7 @@
         <p>GitHub version control</p>
         <p>test driven development</p>
         <p>pair programming</p>
+        <p>wireframing</p>
         <p>illustration</p>
         <p>photography</p>
         <p>copywriting</p>
