--- a/dilemmas.html
+++ b/dilemmas.html
@@ -35,7 +35,7 @@
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
         <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
         <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
         <li class='number'>240.393.9747</li>
       </ul>
