about box bullet point

--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
         </div>
         <div class='short'>
           <ul><h2 class='short-title'>The Short List</h2>
-            <li>&bull; political issue: climate change</li>
+            <li>&bull; political issue: campaign finance reform</li>
+            <li>&bull; life issue: climate change</li>
             <li>&bull; guilty pleasure: showtunes</li>
             <li>&bull; proud accomplishment: I’ve run two marathons.</li>
             <li>&bull; embarassing secret: I own three fannie packs.</li>
