--- a/resume.html
+++ b/resume.html
@@ -49,13 +49,18 @@
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
 
+        <h4>I'm seeking an entry-level position as a junior full-stack web developer in an agile environment. Having recently transitioned from graphic design, my goal is to craft intelligent code for exceptional user experiences.</h4>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
         <h2 class='resume'>EXPERIENCE</h2>
         <div class='resume-shim'></div>
 
         <h3>General Assembly / New York, NY</h3>
         <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
         <ul>
-          <li>completed a 12-week full-time development bootcamp that covers a broad range of topics, all with an emphasis on agile methodology</li>
+          <li>completed a 12-week full-time development bootcamp that covers <br>a broad range of topics, all with an emphasis on agile methodology</li>
         </ul>
 
         <div class='resume-shim'></div>
@@ -113,8 +118,8 @@
         <p>HTML5 / CSS3</p>
         <p>Ruby / Rails4 / Sinatra</p>
         <p>JavaScript / jQuery / AJAX</p>
-        <p>Backbone.js / Node.js</p>
-        <p>MongoDB / SQL / D3.js</p>
+        <p>Backbone.js / Node.js / D3.js</p>
+        <p>PostgreSQL / MongoDB</p>
 
         <div class='resume-shim'></div>
         <div class='resume-shim'></div>
