clean up wording

--- a/gtrainlovestory/gtrainlovestory.html
+++ b/gtrainlovestory/gtrainlovestory.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="intro-content">
                         <h5><a href="http://www.ascensionbrooklyn.org/">Church of the Ascension</a></h5>
-                        <p>Ceremony shcedule</p>
+                        <p>Ceremony schedule</p>
                         <ul>
                             <li>prelude</li>
                             <li>processional</li>
@@ -87,7 +87,7 @@
                             <li>cocktails</li>
                         </ul>
                         <br>
-                        <p>Rides to St. Mazie start at 5:15pm.</p>
+                        <p class="tighten">Rides to St. Mazie start at 5:15pm.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -96,7 +96,7 @@
                     </div>
                     <div class="intro-content">
                         <h5><a href="http://www.stmazie.com/">St. Mazie</a></h5>
-                        <p>345 Grand Street near Havemeyer Street</p>
+                        <p class="tighten">345 Grand Street near Havemeyer Street</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -105,7 +105,7 @@
                     </div>
                     <div class="intro-content last">
                         <h5><a href="http://www.larrylawrencebar.com/">Larry Lawrence Bar</a></h5>
-                        <p>295 Grand Street on the other side of Havemeyer Street</p>
+                        <p class="tighten">295 Grand Street on the other side of Havemeyer Street</p>
                     </div>
                 </div>
             </div>
@@ -117,15 +117,15 @@
                 <div class="col-md-5 col-md-offset-7">
                     <div class="feature-list">
                         <h3>Jokes</h3>
-                        <p>If you don't get these, you probably aren't that smart.</p>
+                        <p>For the people</p>
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
                                     <span data-icon="&#xe03e;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Why can't you trust atoms?</h5>
-                                    <p>They make everything up.</p>
+                                    <h6>Why can't you trust atoms?</h6>
+                                    <p class="tighten">They make everything up.</p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -133,8 +133,8 @@
                                     <span data-icon="&#xe040;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>A puff of helium floats into a bar.</h5>
-                                    <p>The bartender says, "Sorry, we don't serve noble gases here." The helium doesn't react..</p>
+                                    <h6>A puff of helium floats into a bar. The bartender says, "Sorry, we don't serve noble gases here."</h6>
+                                    <p class="tighten">The helium doesn't react..</p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -142,8 +142,8 @@
                                     <span data-icon="&#xe03c;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <p>Moses and Jesus are playing golf. Moses steps up to the tee and hits a beautiful drive right down the fairway. Jesus gets up and hooks it into the bushes. But then Jesus raises his hand and a stream emerges, carrying the golf ball onto the fairway where a bird swoops down, picks it up and drops it right in the cup for a hole in one.</p>
-                                    <p>Moses says, “Are we gonna play golf or are we gonna fuck around?”</p>
+                                    <h6>Moses and Jesus are playing golf. Moses steps up to the tee and hits a beautiful drive right down the fairway. Jesus gets up and hooks it into the bushes. But then Jesus raises his hand and a stream emerges, carrying the golf ball onto the fairway where a bird swoops down, picks it up and drops it right in the cup for a hole in one.</h6>
+                                    <p class="tighten">Moses says, “Are we gonna play golf or are we gonna fuck around?”</p>
                                 </div>
                             </li>
                         </ul>
@@ -192,6 +192,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3>Freebies</h3>
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/o21mTbkaTw0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                    <br><br>
                 </div>
             </div>
             <div class="row">
@@ -222,7 +224,7 @@
                             </a>
                             <figcaption>
                             <h2><a href="#" class="blog-category" data-toggle="tooltip" data-placement="top" data-original-title="See more posts">Poetry</a></h2>
-                            <p><a href="#" class="blog-post-title">Read some poetry ya mook.<i class="fa fa-angle-right"></i></a></p>
+                            <p><a href="#" class="blog-post-title">Read some poetry.<i class="fa fa-angle-right"></i></a></p>
                             </figcaption>
                         </figure>
                     </article>
@@ -328,12 +330,11 @@
                 <div class="col-md-7">
                     <div class="footer-links">
                         <ul class="footer-group">
-                            <li><a href="https://docs.google.com/document/d/1EoksU-zAklFcn1SHDltZhQP7JAhGDVShZl_mwZJgdXY/edit?usp=sharing">Bushwick Brewing History</a></li>
-                            <li><a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.ktdwsWGQu7Lc&usp=sharing">Bushwick Brewing Map</a></li>
-                            <li><a href="https://flic.kr/s/aHska486ks">Wedding Flickr Album</a></li>
-                            <li><a href="http://www.sadtrombone.com/">Sad Trombone</a></li>
-                            <li><a href="https://instagram.com/chrisbup/">My Instagram</a></li>
-                            <li><a href="https://twitter.com/chrisbup">My Twitter</a></li>
+                            <li><a href="https://flic.kr/s/aHska486ks">wedding flickr album</a></li>
+                            <li><a href="https://docs.google.com/document/d/1EoksU-zAklFcn1SHDltZhQP7JAhGDVShZl_mwZJgdXY/edit?usp=sharing">more history</a></li>
+                            <li><a href="https://instagram.com/chrisbup/">insta</a></li>
+                            <li><a href="https://twitter.com/chrisbup">twitter</a></li>
+                            <li><a href="http://www.sadtrombone.com/">sad trombone</a></li>
                         </ul>
                         <p>Copyright © 2015 <a href="#">ChrisBup</a><br>
                         <a href="#{http://tympanus.net/codrops/licensing/}">Licence</a> | Crafted with <span class="fa fa-heart pulse2"></span> by <a href="http://www.chrisheuberger.com/">Chris Heuberger</a>.</p>
